# road-to-lhse

./: .gitignore  README.md
ds/: .gitignore  Makefile  README.md  avl.c  avl.h  test_avl.c
sql-engines/: README.md
sql-engines/sqlite-tdigest/: Makefile  README.md  sqlite3-tdigest.c  tdigest.dylib  tdigest.h
tools-of-the-trade/: .tool-versions  README.md
tools-of-the-trade/asm-from-java/: README.md  SimpleTest.java
tools-of-the-trade/lucene-exp/: README.md  settings.gradle  test.txt
tools-of-the-trade/lucene-exp/app/: build.gradle
tools-of-the-trade/microbenchexp/: pom.xml
tools-of-the-trade/microbenchexp/src/main/java/org/sample/: MyBenchmark.java
tools-of-the-trade/rkdb/: Cargo.toml  README.md
tools-of-the-trade/rkdb/src/: cli.rs  db.rs  main.rs  server.rs
tools-of-the-trade/rust-protocol-exp/: README.md
tools-of-the-trade/rust-protocol-exp/rust-tcp/: Cargo.toml
tools-of-the-trade/rust-protocol-exp/rust-tcp/src/: main.rs
trino-and-iceberg/: README.md
trino-and-iceberg/trino-exp/: .gitignore  README.md  compose.yml  iceberg-catalog-creation.py
trino-and-iceberg/trino-exp/etc/trino/catalog/: pgcatalog.properties  pgiceberg_airline.properties  pgiceberg_taxi.properties  reccatalog.properties
trino-and-iceberg/trino-recutil/: .gitignore  .tool-versions  README.md  checkstyle-suppressions.xml  pom.xml
trino-and-iceberg/trino-recutil/examples/score/: test.rec
trino-and-iceberg/trino-recutil/src/main/java/com/mark/: RecutilClient.java  RecutilColumnHandle.java  RecutilColumnn.java  RecutilConfig.java  RecutilConnector.java  (+9 more)
(+15 files in other folders)
