[package]
name = "rkdb"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.45.1", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.14", features = ["full"] }
tower = "0.5.2"
sqlite = "0.37.0"
clap = { version = "4.5.39", features = ["derive"] }
